--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "@arcana/auth": "^1.0.3",
     "@arcana/auth-react": "^0.0.3",
     "@chainlink/contracts": "^0.6.1",
-    "@openzeppelin/contracts": "^4.8.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.15",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "ethers": "^5.7.2",
+    "firebase": "^9.19.1",
+    "i": "^0.3.7",
+    "dotenv": "^16.0.3",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
@@ -46,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.3.7",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
