--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "firebase": "^9.19.1",
     "i": "^0.3.7",
-    "dotenv": "^16.0.3",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4",
@@ -57,7 +59,6 @@
     ]
   },
   "devDependencies": {
-    "chai": "^4.3.7",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
@@ -67,11 +68,11 @@
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
     "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
     "hardhat": "^2.13.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
     "ts-node": "^10.9.1",
-    "typechain": "^8.1.0",
-    "typescript": "^5.0.3"
+    "typechain": "^8.1.0"
   }
 }
